--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "ashwini more",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
   }
 }
