--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "ashwini more",
   "license": "ISC",
   "dependencies": {
+    "expect": "^23.6.0",
     "express": "^4.16.4",
+    "mocha": "^5.2.0",
     "socket.io": "^2.1.1"
   }
 }
